update tmux conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,10 +7,20 @@ setw -g pane-base-index 1
 set-option -g prefix2 C-a  
 bind-key C-a send-prefix  
 
-bind-key -r '+' resize-pane -U 10  
-bind-key -r '-' resize-pane -D 10  
-bind-key -r '<' resize-pane -L 10  
-bind-key -r '>' resize-pane -R 10  
+# nvim related bindings
+unbind C-v
+bind v split-window -h
+bind s split-window -v
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
+bind -r '+' resize-pane -U 10  
+bind -r '-' resize-pane -D 10  
+bind -r '<' resize-pane -L 10  
+bind -r '>' resize-pane -R 10  
 
 set -g mouse on  
 setw -g mode-keys vi  
+
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded!"
