--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ set -as terminal-features ",xterm-256color:RGB"
 set -g base-index 1
 setw -g pane-base-index 1
 
+set -g status-style bg=default
+
 set-option -g prefix2 C-a  
 bind-key C-a send-prefix  
 
